objects/IO_and_Switching_Information__c.object
<CustomObject>
    <description>Child object of Customer Design Specification Object used for section I/O in CDS form</description>
    <fields>
        <fullName>Custom_Design_Specification__c</fullName>
        <label>Custom Design Specification</label>
        <referenceTo>Custom_Design__c</referenceTo>
        <relationshipLabel>I/O and Switching Informations</relationshipLabel>
        <relationshipName>I_O_and_Switching_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_interface_reference__c</fullName>
        <label>Customer interface reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_mode_e_g_drive_strengthg__c</fullName>
        <label>Drive mode ( e.g. drive strengthg )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_O_function__c</fullName>
        <label>I/O function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRV</fullName>
                </value>
                <value>
                    <fullName>REC</fullName>
                </value>
                <value>
                    <fullName>BIDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_O_qty__c</fullName>
        <label>I/O qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_O_type_cell_prefixb__c</fullName>
        <label>I/O type( cell prefixb )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_clock_freq_MHze__c</fullName>
        <label>Interface clock freq( MHze )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_data_rate_Mb_sf__c</fullName>
        <label>Interface data rate( Mb/sf )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modeling_load_Txline_R_L_Ch__c</fullName>
        <label>Modeling load ( Txline, R,L,Ch )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_pin_qty__c</fullName>
        <label>Module pin qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>I/O and Switching Information</label>
    <nameField>
        <displayFormat>IO-{000000}</displayFormat>
        <label>I/O and Switching Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>I/O and Switching Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>